--- a/adoclar/12.kapsülleme.adoc
+++ b/adoclar/12.kapsülleme.adoc
@@ -1,6 +1,6 @@
-Kapsülleme veya diğer adıyla veri kapsülleme işlemi, basitçe bir sınıfın (class) dışarıya karşı kapalı hale getirilmesi ve sınıfa erişimin kapsüllenmesi yani engellenmesidir. Bilindiği üzere, sınıflar, özelliklerden (properties) ve metotlardan (methods) oluşmaktadır. Veri kapsüllemesinin amacı, sınıfta bulunan özelliklerin erişimini kontrol altına almak ve sınıfın özelliklerine dışarıdan erişimi engellemek, sınıftaki metotlar marifetiyle erişimi kontrol etmektir.
+Kapsülleme kısaca sınıf içerisindeki verilere dışarıdan erişimin kapatılmasıdır. Verilere erişim sınıf üye fonksiyonları tarafından yapılmalıdır.
 
-[source,c++]
+[source,java]
 ----
 class insan{
 public:
@@ -21,9 +21,12 @@ int main(){
     return 0;
 }
 ----
+
+&nbsp;
+
 Görüldüğü üzre i1 nesnesinin değişkenlerine dışarıdan atama yapıp değiştirebiliyoruz.Bunun olmaması için atamaları kurucu fonksiyonumuz içinde yapıp,değişkenleri dışarıya karşı kapsülleyebiliriz.
 
-[source,c++]
+[source,java]
 ----
 class insan{
 private:
@@ -43,5 +46,7 @@ int main(){
     return 0;
 }
 ----
-İşte boy ve kilo değişkenlerini private tanımlayıp,sadece nesne oluştururken değerlere atama yapabilmeyi zorunlu kıldık.Eğer ki nesne değişkenlerine dışarıdan erişilmeye çalışılınırsa derleyici hata verecektir.
 
+&nbsp;
+
+İşte boy ve kilo değişkenlerini private tanımlayıp,sadece nesne oluştururken değerlere atama yapabilmeyi zorunlu kıldık.Eğer ki nesne değişkenlerine dışarıdan erişilmeye çalışılınırsa derleyici hata verecektir.
