--- a/Liste/list.adoc
+++ b/Liste/list.adoc
@@ -1,5 +1,4 @@
 = Liste (List)
-
   
 Standart Şablon Kütüphanesinin (stl) bir üyesi olan liste çift bağlantılıdır. Erişimi yavaştır çünkü herhangi bir öğeye ulaşmak için listenin başından itibaren geçilmesi gerekir.
 
@@ -32,8 +31,10 @@ int main()
 {
     list<int> sayilar;
     sayilar.push_front(1); //Başa 1 ekler. Eleman yoksa ilkini olusturur.
+    //push_front(): Basa eleman ekleme.
     sayilar.push_front(2); //Başa 2 ekler.
     sayilar.push_back(3); //Sona 3 ekler.
+    //push_back(): Sona eleman ekleme.
     cout << sayilar <<endl;
 
     list<string> kelime{"Merhaba", "Dunya"};
@@ -73,6 +74,7 @@ int main()
 {
     list<char> karakter;
     karakter.assign(5, 'a');  //5 tane char degeri atar.
+    //assing(): Atama islemi yapar.
 
     for (char c : karakter) { //Karakter sayisi kadar döngü döner.
         cout << c << '\n';
@@ -80,15 +82,19 @@ int main()
 
     list<int> sayilar;
     cout << "Bos mu? " << sayilar.empty() << '\n'; //Boş ise 1 dondurur.
+    //empty(): Map in boslugunu kontrol eder.
     sayilar.push_back(33);
+    //push_basck(): Sona eleman ekleme.
     sayilar.push_back(27);
     cout << "Bos mu? " << sayilar.empty() << '\n'; //Dolu ise 0 dondurur.
 
     list<int> sayilar2 {1, 3, 5, 7};
     cout << "sayilar2'nin eleman sayisi: " << sayilar2.size() << " elements.\n"; //Listenin eleman sayisini dondurur.
-
+    //size(): Map in boyutunu dondurur.
+    
     list<int> s;
     cout << "Tanimlanabilecek en buyuk boyut: " << s.max_size() << "\n"; //Tanimlanabilecek en buyuk boyuttur.
+    //max_size(): Map in tanimlanabilecegi en buyuk boyut.
     return 0;
 }
 ----
@@ -120,19 +126,23 @@ int main()
     list<string> names;
 
     names.push_back("Tom");
+    //push_back(): Sona eleman ekleme.
     names.push_back("Dick");
     names.push_back("Harry");
     names.push_back("Juliet");
 
     list<string>::iterator pos;
     pos = names.begin();
+    //begin(): Ilk elemanin adresini atar.
     pos++;
     pos++;
     pos++;
 
     names.insert(pos, "Romeo"); // Bastan ucuncuden sonrakine ekleme yap.
+    //insert(): Soylenen elemanin bulundugu yere atama yapilir. Digeri bir sonrakine aktarilir.
 
     for (pos = names.begin(); pos != names.end(); pos++)
+    //end()= Son elemanin adresini dondurur.
         cout << *pos << "\n";
     cout << endl;
 
@@ -174,10 +184,13 @@ int main()
     std::cout << "Liste: ";
     for(auto& el: c) std::cout << el << ' ';
     std::cout << '\n';
-    c.resize(5); //Yeniden boyutlandir. Tanimlanmayan elemanlar icin 0 degerini ata.
+    
+    c.resize(5); // Tanimlanmayan elemanlar icin 0 degerini ata.
+    //resize(): Yeniden boyutlandir.
     std::cout << "5 elemanli: ";
-include::ntuser.ini[]    for(auto& el: c) std::cout << el << ' ';
+    for(auto& el: c) std::cout << el << ' ';
     std::cout << '\n';
+    
     c.resize(2);
     std::cout << "2 elemanli: ";
     for(auto& el: c) std::cout << el << ' ';
@@ -209,13 +222,16 @@ int main( )
     std::cout << '\n';
 
     sayilar.erase(sayilar.begin());
-
+    //begin(): Ilk elemani dondurur. 
+    //erase(): Silme islemi.
+    
     for (auto &i : sayilar) {
         std::cout << i << " ";
     }
     std::cout << '\n';
 
     list<int>::iterator bas = sayilar.begin();
+    //Iterator oldugu icin ilk elemanin adresini dondurur.
     list<int>::iterator son = sayilar.begin();
     advance(bas,2); //Bastan 2
     advance(son,5); //Bastan 5.
@@ -262,14 +278,17 @@ struct Baskan
     }
     Baskan& operator=(const Baskan& baska) = default;
 };
+//move: Map in tasinmasi.
 
 int main()
 {
     list<Baskan> Secilen;
     Secilen.emplace_back("Nelson Mandela", "South Africa", 1994);
+    //emplace_back(): Sona ekleme. Kurucu ile doğrudan eklenir.
 
     list<Baskan> yenidenSecilen;
     yenidenSecilen.push_back(Baskan("Franklin Delano Roosevelt", "the USA", 1936));
+    //push_back(): Sona ekleme
 
     for (Baskan const& baskan: Secilen) {
         cout << baskan.isim << " " << baskan.ulke << "'nin " << baskan.yil << " yili baskanidir.\n";
@@ -299,7 +318,7 @@ Franklin Delano Roosevelt the USA'de 1936 yilinda tekrar baskan secilmistir.
  * Birlestirilmis siralama
  */
 using namespace std;
-ostream& operator<<(ostream& ostr, const list& list)
+ostream& operator<<(ostream& ostr, const list<int>& list)
 {
     for (auto &i : list) {
         ostr << " " << i;
@@ -312,10 +331,13 @@ int main()
     list<int> liste2 = { 7,7,2,5,4 };
 
     liste1.sort();
+    //sort(): Siralar.
     liste2.sort();
     cout << "liste1:  " << liste1 << endl;
     cout << "liste2:  " << liste2 << endl;
+    
     liste1.merge(liste2);
+    //merge(): Birlestirir.
     cout << "Birlestirilmis hali: " << liste1 << endl;
 }
 ----
@@ -336,7 +358,7 @@ Birlestirilmis hali:  0 1 2 3 3 4 5 7 7 9
 /**
  * Araya koyma fonksiyonu.
  */
-std::ostream& operator<<(std::ostream& ostr, const std::list& list)
+std::ostream& operator<<(std::ostream& ostr, const std::list<int>& list)
 {
     for (auto &i : list) {
         ostr << " " << i;
@@ -349,13 +371,14 @@ int main ()
     std::list<int> liste2 = { 10, 20, 25, 30, 50 };
 
     auto ata = liste1.begin();
+    //begin(): Ilk elemani dondurur.
     std::advance(ata, 2);
 
     std::cout << "list1: " << liste1 << "\n";
     std::cout << "list2: " << liste2 << "\n";
 
     liste1.splice(ata, liste2); //2. elemandan itibaren liste2'yi araya koy.
-
+    //splice():Araya koyar.
     std::cout << "list1: " << liste1 << "\n";
     std::cout << "list2: " << liste2 << "\n";
 }
@@ -424,12 +447,14 @@ int main()
     std::cout << '\n';
 
     sayilar.unique();
+    //unique(): Ard arda gelen tekrarlari siler.
     std::cout << "Ard arda tekrarsiz: ";
     for (auto i : sayilar)
         std::cout << ' ' << i;
     std::cout << '\n';
 
     sayilar.sort(); //Ard arda oldugunda tekrar onlendigi icin siralama yapildi.
+    //sort(): Kucukten buyuge siralar.
     sayilar.unique();
     std::cout << "Tekrarsiz: ";
     for (auto i : sayilar)
@@ -446,5 +471,4 @@ Once:   17 20 1 2 2 5 3 3 2 1 1 2
 Ard arda tekrarsiz:  17 20 1 2 5 3 2 1 2
 Tekrarsiz:  1 2 3 5 17 20
 ----
-
 
