--- a/C++Yapı.adoc
+++ b/C++Yapı.adoc
@@ -9,7 +9,8 @@
  
 *1.* Burası direk olarak ön işlemci olarak bilinir.Derleyiciye bir dosya yerleştirme talimati verir.Bu dosya iostream kütüphanesi için gerekli kodları içerir.Bu kütüphane input,output kullanmaya izin veren kodları içerir.
 
-*2.* Her c++ programı main isimli metoda sahip olmalıdır.Burası uygulamanın başlangıç noktasıdır.Kodlar yorumlanmaya bu satırdan başlanır.int kelimesi metodun dönüş tipidir.
+*2.*Her C programının main () olarak bilinen bir metodu olmalıdır. Programın bilgisayarınızda yürütülmesine başladığınızda uygulamanın giriş noktası olarak adlandırılır. 
+int kısmı, yöntemin dönüş türüdür. Yöntem adından sonraki parantezler (), bunun bir yöntemin olduğunu ve argüman almadığını, başka bir deyişle, değerleri aktarmak için parametre olmadığını belirtir.
 
 
 *3.* C++ da metodların gövdesi bu karakter ile başlar.
