--- a/C++İlkUygulama.adoc
+++ b/C++İlkUygulama.adoc
@@ -4,13 +4,18 @@
 [source,c++]
 ----
 
- #include <iostream>(1)
- int main()(2)
- {(3)
-    std::cout<<"hello world";(4)
- return 0;(5)
- }(6)
-  ----
+#include<iostream> // <1>
+
+int main() ;;<2>
+
+{ // <3>
+
+cout<<"hello world"<<endl; # <4>
+
+return 0; ;; <5>
+
+} // <6>
+----
  
 *1.* Burası direk olarak ön işlemci olarak bilinir.Derleyiciye bir dosya yerleştirme talimati verir.Bu dosya iostream kütüphanesi için gerekli kodları içerir.Bu kütüphane input,output kullanmaya izin veren kodları içerir.
 
