--- a/Igor/cpp-01.adoc
+++ b/Igor/cpp-01.adoc
@@ -88,6 +88,10 @@ Arttırma ve azaltma operatörlerini diğer ifedalerle kullanmayın.
 Örneğin; a = (a{plus}{plus}) + ++b
 ====
 
+[NOTE]
+====
+Progtamlama hakkında genel bilgi içeren Steve McConnell'ın Code Complete kitabı tavsiye edilir.
+====
 
 === 2.4. Strings
 
@@ -118,7 +122,7 @@ kütüphanesini eklemek lazım
 
 * Aynı tip verileri saklamak için kullanılır
 
-* Verilerden oluşur:
+* Verilerden oluşur, verilere ulaşmak oldukça hızlıdır:
 [source,cpp]
 ----
 array<float, 3> arr = {1.0f, 2.0f, 3.0f};
@@ -136,7 +140,7 @@ array<float, 3> arr = {1.0f, 2.0f, 3.0f};
 * std::vector kullanmak için #include<vector>
 kütüphanesini eklemek lazım
 
-* Vektör dinamik bir tablo olarak uygulanır
+* Vektörler, elemanları saklamak için sürekli saklama yerleri kullanan dizi kaplarıdır. Depolamayı yönetebilir ve verimli bir şekilde dinamik olarak büyüyebilirler. Bu yeteneklerin bir bedeli vardır: vektörler, depolama ve dinamik olarak büyüyebilme yeteneği karşılığında daha fazla bellek tüketir.
 
 * Depolanan öğelere std :: array'deki gibi erişilir
 
@@ -148,14 +152,74 @@ kütüphanesini eklemek lazım
 
 * Kullanın! Hızlı ve esnektir!
 Bunun varsayılan bir kapsayıcı olduğunu düşünün aynı türden eşya koleksiyonlarını depolar
-
-==== 2.6.1. Vektörün boyutlandırılması 
-
 * *push_back/emplace_back* operatörleri birden fazla kez vektörün boyutunu değiştirebilir
 
 * *reserve(n)* vektörün *n* öğeyi saklamak için yeterli belleğe sahip olmasını sağlar
 
 * *n* parametresi yaklaşık bile olabilir, bu çok önemli bir optimizasyon
+
+==== 2.6.1.Vektörün boyutlandırılması 
+
+===== push_back
+
+push_back fonksiyonunun tek amacı, vektörün sonuna eleman eklemektir. Dizilerde depolama alanı boyutu sabittir ve dizi boyutunu büyütmemiz gerekiyorsa, daha büyük boyutlu başka bir dizi ayırmalı ve içeriği yeni diziye kopyalamalıyız.Bu şüphesiz ekstra kod gerektirir ve içeriği yeni diziye kopyalamak Süreç tekrarlanır hale gelir ve böylece programınızı fazlasıyla yavaşlatır.Düzeltme boyutu dizisini kullanırken meydana gelebilecek tüm durumdan kaçınmak için, vektörle değiştirebilir ve bellek ayarı ne kadar büyük olursa olsun, vektöre ekstra veri eklemek istediğimizde 'push_back' işlevini çağırabiliriz.Vektörde 'push_back' işlevinin iki sürümü vardır.(ilki C++11'e eklenir.)
+
+*T : vektörün veri türü.*
+
+====== *1*.  void push_back(T&& x) ; (C++11)
+
+ 
+Parametreler:X - vektörün sonuna eklenecek değer.
+
+Dönüş türü:void
+
+Bu fonksiyon eklenecek veri bir değer olduğunda çağrılır, örneğin hazır bir bilgi.Bir değer kabul ettiğinden, verileri kopyalamak yerine verileri taşır.Bu işlev, depolama alanı daha önce rezerve edilmemişse vektörün kapasitesini artırır.Ancak, depolama reserve() işlevini kullanarak rezerve edilirse, bu işlevi çağırmak yalnızca kapasitesini değil boyutunu artırır.Ayrılmış boyuttan daha fazla veri eklediğinizde kapasite artacaktır.
+
+====== *2*. void push_back(const T& x);
+
+Parametreler:X - vektörün sonuna eklenecek değer.
+
+Dönüş türü:void
+
+Bu push_back fonksiyonu, argüman olarak bir değer veya referans ilettiğinizde çağrılır.Bu işlevi çağırırken, vektörün biraz depolama alanı ayırması durumunda kapasite aynı kalır, ancak kapasite yoksa, boyutu ile birlikte artacaktır.
+
+====== Emplace_back ve push_back fonksiyonları arasındaki fark
+
+Her ne kadar C {plus}{plus} emplace_back ve push_back fonksiyonları vektörün sonuna veri eklemek olsa da, aralarında bazı farklılıklar vardır. Ve bahsetmeye değer küçük farklılıklardan biri de push_back fonksiyonunun zamandan beri Standart C {plus}{plus} 'ın bir parçası olmasıdır bununla birlikte, emplace_back işlevi dile yeni bir ektir. Yakın zamanda C {plus}{plus} 11 özellikleri altına eklenmiştir.
+
+*Fark 1:* push_back, yapıcı birden fazla argümanı kabul ederse, türün tek nesnesini kabul ederken, emplace_back, türün yapıcısının argümanlarını kabul eder.Bu fark sadece kurucu birden fazla argümanı kabul ettiğinde ortaya çıkar. Push_back çağrılırken yalnızca bir argümanı kabul eden kurucuda, nesneyi iletmek yerine kurucu türünün argümanını iletebiliriz. Bir bağımsız değişken yapıcısı için ham veri - nesne içi push_back öğesinin bu kabulü, push_back işlevinin C {plus}{plus} 11 sürümüne bağlıdır. C {plus}{plus} 11 sürümü, iletilen argümandan nesnenin oluşturulmasına izin verir, bu daha sonra vektör kabına itilir.
+Yapıcı iki veya daha fazla bağımsız değişkeni kabul ederse, türün nesnesini açıkça iletmeniz gerekir.
+
+*Fark 2:* Verimlilik, 
+'Verimlilik' kelimesinin burada farklı anlamları olabilir, burada daha hızlı çalışma anlamında inceliyeceğiz.İlk olarak, vektör türünün yerleşik bir tür olduğunu görelim ve sonra kullanıcı tanımlı tür için göreceğiz.
+
+[underline]#built-in type(yerleşik tip)#
+
+Tür yerleşik bir türse, push_back ve emplace_back işlevi arasında verimlilik farkı yoktur.
+
+[underline]#User-defined type(Kullanıcı tanımlı tip)#
+
+Vektör türü bir sınıf veya yapı i ise, e. kullanıcı tanımlı bir tür, bu durumda emplace_back'in push_back işlevinden daha verimli olduğu, neden ve nasıl?
+
+tür kullanıcı tanımlı tür olduğunda push_back çağrısı
+
+Nesneyi (nesne oluşturulmadan önce) push_back kullanarak doğrudan vektöre eklemeye çalışırsak, bu işlemde önce geçici bir nesne oluşturulur. Geçici nesne oluşturulurken üç adım oluşur:
+ 
+i) Geçici nesne oluşturmak için bir yapıcı çağrılır.
+ 
+ii) Daha sonra vektörde geçici nesnenin bir kopyası oluşturulur.
+ 
+iii) Nesneyi kopyaladıktan sonra, yıkıcı geçici nesneyi yok etmek için çağrılır.
+
+Push_back çağrıldığında meydana gelen üç işlemin doğrulaması bu yazının altında, 'Yan Not' bölümünde gösterilir.
+
+tür kullanıcı tanımlı tür olduğunda emplace_back çağrısı
+
+Emplace_back kullanılırsa, bunun yerine nesne doğrudan vektörde oluşturulur. Emplace_back ile geçici nesnenin gereksiz yaratılmasından kaçınılır. Böylece performans artırıldı.
+
+Aşağıdaki resimsel gösterim daha iyi anlamanıza yardımcı olabilir.  
+
+image::difference-between-push_back-and-emplace_back.jpg[]
 
 [source , cpp]
 ----
@@ -169,8 +233,9 @@ Bunun varsayılan bir kapsayıcı olduğunu düşünün aynı türden eşya kole
 ----
 ==== 2.6.2. Vektör örneği
 
-[source , cpp]
+[source ,C++]
 ----
+
 1 #include <string >
 2 #include <vector >
 3 #include <iostream >
@@ -183,7 +248,10 @@ Bunun varsayılan bir kapsayıcı olduğunu düşünün aynı türden eşya kole
 10 cout << "Last number: " << numbers.back() << endl;
 11 return 0;
 12 }
+
 ----
+
+image::Vector-vs-Array.jpg[]
 
 === 2.7. Değişkenlerin kapsam alanı
 
@@ -339,9 +407,91 @@ for (başlangıç_koşulu; son_bulma_koşulu; artış) {
 * C++ da for dögüsü çok hızlıdır
 * *while* döngüsünden daha az esnek ama hata eğilimide daha az
 * Döngünün son bulma koşulu bilindiğinde *for*  döngüsünün kullanımı tavsiye edilir
-* 
+
+==== 2.11.3 Döngü Aralığı
+
+Yineleyebileceğiniz herhangi bir şey olarak tanımlanan bir "aralık" aracılığıyla yürütülmesi gereken döngüler ile tanımlanır.Dizi veya vektör gibi standart kapsayıcılar üzerinde yineleme daha basit sözdizimine sahiptir.C ++ 11'e eklendi.
+
+[source, cpp]
+----
+1 for (const auto& value : container) {
+2 // This happens for each value in the container.
+3 }
+----
+
+ 
+For-range-declaration bölümünde bildirilen ad, for ifadesinde yereldir ve ifade veya deyimde yeniden bildirilemez.
+
+[IMPORTANT]
+====
+https://docs.microsoft.com/tr-tr/cpp/cpp/auto-cpp?view=vs-2019[auto] anahtar kelimenin, ifadenin aralık aralığı bildirimi bölümünde tercih edildiğini unutmayın.
+====
+
+==== 2.11.4 Döngüde Çıkış ve Devam
+
+* Döngü üzerinde kontrolümüz vardır
+* Döngüden çıkmak için *break* 'i kullanın
+* Sonraki yinelemeye geçmek için **continue **'i kullanın
+
+[source, cpp]
+----
+1 while (true) {
+2 int i = /* Magically get new int. */
+3 if (i % 2 == 0) {
+4 cerr << i << endl;
+5 } else {
+6 break;
+7 }
+8 }
+----
+
+==== 2.12 Git
+
+* Dağıtılmış sürüm kontrolü için ücretsiz yazılımdır
+* yerel ve uzak dosyaları senkronize eder
+* tüm değişikliklerin geçmişini saklar
+
+[underline]#Senkronize nedir?#
+
+* Bilgisayardaki yerel dosyalar
+* Depodaki uzak dosyalar
+* Bir Gitlab sunucusu kullanıyoruz
+
+Örnek veri havuzu: https://gitlab.igg.uni-bonn.de/teaching/cpp-homeworks-2018
 
 
+*İş akışı*
+
+Bir depoyu klonlama:
+
+* git clone <repo_url> <local_folder>
+In <local_folder>
+* git add <files>
+* git commit -am 'descriptive message'
+* git push origin master 
+
+[IMPORTANT]
+====
+http://rogerdudler.github.io/git-guide/index.tr.html[Basit-Türkçe_Git rehberi]
+====
+
+== Referanslar
+
+Cpp Core Guidelines:
+https://github.com/isocpp/CppCoreGuidelines
+
+Google Code Styleguide:
+https://google.github.io/styleguide/cppguide.html
+
+Git guide:
+http://rogerdudler.github.io/git-guide/
+
+C++ Tutorial:
+http://www.cplusplus.com/doc/tutorial/
+
+Book: Code Complete 2 by Steve McConnell
+
+http://candcplusplus.com/c-vectorpush_back-c11-push_back-function#1st_ver
 
 
 
